<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libot</name>
  <version>0.0.0</version>
  <description>An autonomous mobile robot equipped with lidar sensor for accurate mapping, real-time localization, and dynamic navigation in unfamiliar environments.</description>
  <maintainer email="mohitgpt0823@email.com">Mohit Kumar Gupta</maintainer>
  <author email="mohitgpt0823@email.com">Mohit Kumar Gupta</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
